--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <!-- displays site properly based on user's device -->
-  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="Assets/images/favicon-32x32.png">
   <title>Frontend Mentor | Job Listings</title>
   <!-- my CSS -->
-  <link rel="stylesheet" href="./css/myStyles.css">
+  <link rel="stylesheet" href="Assets/css/myStyles.css">
   <!-- Bootstrap CSS -->
-  <link rel="stylesheet" href="./css/bootstrap.css">
+  <link rel="stylesheet" href="Assets/css/bootstrap.css">
   <!-- font from google  -->
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap" rel="stylesheet">
 
@@ -19,7 +19,7 @@
 <body>
 
   <div class="container-fluid p-0">
-    <img class="img-fluid w-100" src="./images/bg-header-desktop.svg" alt="banner.jpg">
+    <img class="img-fluid w-100" src="Assets/images/bg-header-desktop.svg" alt="banner.jpg">
   </div>
 
   <div id="contenedorFiltros" class="container p-2 rounded shadow mx-auto col-10">
@@ -50,7 +50,7 @@
     Coded by <a href="#">Your Name Here</a>.
   </footer>
 
-  <script src="./js/app.js"></script>
+  <script src="Assets/js/app.js"></script>
 </body>
 
 </html>
